# optor

./: .gitignore  CMakeLists.txt
source/: main.cpp
source/common/: CMakeLists.txt
source/common/include/common/: Concole.hpp  ErrorHandler.hpp  Utils.hpp
source/common/source/: Utils.cpp
source/global/: CMakeLists.txt
source/global/include/global/: Global.hpp
source/gui/: CMakeLists.txt
source/hui/: CMakeLists.txt
source/hui/include/hui/: Color.hpp  Drawable.hpp  Event.hpp  RectDouble.hpp  RectangleShape.hpp  Renderer.hpp  Shape.hpp  Sprite.hpp  Texture.hpp  TexturedShape.hpp  Transformable.hpp  Vector.hpp  Window.hpp
source/hui/source/: Color.cpp  Drawable.cpp  Event.cpp  RectDouble.cpp  RectangleShape.cpp  Renderer.cpp  Shape.cpp  Sprite.cpp  Texture.cpp  TexturedShape.cpp  Transformable.cpp  Vector.cpp  Window.cpp
source/optics/: CMakeLists.txt
source/optics/include/optics/: Camera.hpp  Light.hpp  OpticObj.hpp  Scene.hpp  Sphere.hpp
source/optics/source/: Camera.cpp  Light.cpp  OpticObj.cpp  Scene.cpp  Sphere.cpp
source/vector/: CMakeLists.txt
source/vector/include/vector/: Vector.hpp
source/vector/source/: Vector.cpp
source/widgets/: CMakeLists.txt
source/widgets/include/widgets/: RenderWidget.hpp  SceneWidget.hpp  Widget.hpp  WidgetChildable.hpp  WidgetManager.hpp
source/widgets/source/: RenderWidget.cpp  SceneWidget.cpp  Widget.cpp  WidgetChildable.cpp  WidgetManager.cpp
